# cookiecutter-ml

./: Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
